language/move-lang/tests/move_check/locals/use_after_move_simple.exp
error: 

   ┌── tests/move_check/locals/use_after_move_simple.move:7:17 ───
   │
 7 │         let _ = move x + 1;
   │                 ^^^^^^ Invalid usage of local 'x'
   ·
 6 │         move x;
   │         ------ The local does not have a value due to this position. The local must be assigned a value before being used
   │

error: 

    ┌── tests/move_check/locals/use_after_move_simple.move:11:19 ───
    │
 11 │         let _s3 = s;
    │                   ^ Invalid usage of local 's'
    ·
 10 │         let _s2 = s;
    │                   - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_simple.move:17:17 ───
    │
 17 │         let _ = x + 1;
    │                 ^ Invalid usage of local 'x'
    ·
 16 │         move x;
    │         ------ The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_simple.move:21:19 ───
    │
 21 │         let _s3 = copy s;
    │                   ^^^^^^ Invalid usage of local 's'
    ·
 20 │         let _s2 = s;
    │                   - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_simple.move:27:17 ───
    │
 27 │         let _ = &x;
    │                 ^^ Invalid usage of local 'x'
    ·
 26 │         move x;
    │         ------ The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_simple.move:31:19 ───
    │
 31 │         let _s3 = &s;
    │                   ^^ Invalid usage of local 's'
    ·
 30 │         let _s2 = s;
    │                   - The local does not have a value due to this position. The local must be assigned a value before being used
    │

